@@ -1,3 +1,12 @@
+2012-05-06  Paul A. Rombouts  <p.a.rombouts@home.nl>
+
+	* src/cache.c, src/cache.h
+	Make records with the CF_NOCACHE flag set much more likely to be purged
+	by placing them in front of all the other records in the rr_l purge
+	list.  The CF_NOCACHE flag is now actually stored in the cache and can
+	overrule CF_NOPURGE.  Records with the CF_NOCACHE flag set will not be
+	saved to disk.
+
 2012-05-04  Paul A. Rombouts  <p.a.rombouts@home.nl>
 
 	* src/cache.c, src/cache.h, src/dns_query.c
